feat: amplía la gestión de asesores
